--- a/src/Components/Panel.module.css
+++ b/src/Components/Panel.module.css
@@ -13,7 +13,7 @@
   padding: 10px;
   border-radius: 5px;
   border: none;
-  background-color: darkorange;
+  background-color: #f4a261;
   color: #fff;
 }
 
